- fixed collapsed sections when filtering - fixed account section collapse issue

--- a/assets/sass/layout/sidebar/_sidebar-left.scss
+++ b/assets/sass/layout/sidebar/_sidebar-left.scss
@@ -118,10 +118,6 @@ body.for-cms .sidebar-left {
   right: 1.7em;
 }
 
-.sidebar-left__nav .collapsedSection {
-  display: none;
-}
-
 .sidebar-left__nav .chevron {
   position: absolute;
   top: 0.4em;
